# python-project-83

./: .gitignore  Makefile  README.md  database.sql  pyproject.toml
.github/workflows/: linter-check.yml
page_analyzer/: app.py  db.py
page_analyzer/templates/: base.html  index.html  show.html  urls.html
